# KSeF-xml-download

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  deploy-prod.sh  deploy-test.sh  docker-compose.yml  instaluj-ksef.bat  instaluj-ksef.sh  ksef_client.py  ksef_pdf.py  pyproject.toml  test-post-deploy.sh  test_faktura.xml  test_ksef_client.py  test_ksef_pdf.py  test_validation.py
app/: ksef_pdf.py
docs/: DOCKER-DEPENDENCIES.md
linux/: Dockerfile  entrypoint.sh
